[project]
name = "claude-memory-mcp"
version = "1.0.0"
description = "Universal memory system for Claude instances, backed by SQLite/Turso"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
claude-memory-mcp = "claude_memory_mcp.server:main"
setup-db = "claude_memory_mcp.setup:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
